# model-ball-detection

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  rename_images.py
.devcontainer/: Dockerfile  devcontainer.json
ball_detector/: aux.py  coco.py  draw.py  evaluate.py  hough.py  model.py  train.py  yolo.py
model/: aux.py  evaluate.py  train.py
runs/detect/train16/: results.csv
scripts/: evaluate.py  evaluate_hough.py  evaluate_torch.py  evaluate_yolo.py  inspect_annotation.py  patch_annotation.py  patch_model.py  rename_images.py  table_benchmark.py  train_torch.py  train_yolo.py
tests/: test_aux.py  test_draw.py  test_model.py
