[project]
name = "ball_detector"
version = "0.0.0"
keywords = ["evaluate", "neural", "networks"]
description = "Library to train and evaluate neural networks."
requires-python = ">=3.10"
dependencies = [
  "torch", "torchvision",
]

[[project.authors]]
name = "Valentino Behret"
email = "valentino.behret@mailbox.org"

[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ball_detector"]